--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ás&Ace V.2</title>
+    <title>Ás&Ace V.4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -37,7 +37,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-tennis-dark text-tennis-light">
+  <body class="bg-black text-tennis-light min-h-screen flex items-center justify-center p-4">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
