--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ás&Ace V.5.1</title>
+    <title>Ás&Ace V.5.2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -25,6 +25,11 @@
     </script>
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <style>
+      html {
+        font-size: 60%;
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
@@ -37,7 +42,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-black text-tennis-light min-h-screen flex items-center justify-center p-4">
+  <body class="bg-tennis-dark text-tennis-light min-h-screen">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
