--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tennis Power Ups</title>
+    <title>Ás&Ace V.5.5</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'tennis-dark': '#062a27',      // Verde bem escuro para o fundo e texto escuro
+              'tennis-green': '#a3e635',     // Verde limão (bola de tênis) para botões
+              'tennis-light': '#f1f5f9',     // Cinza claro para texto do corpo
+              'tennis-blue': '#0b534d',      // Verde escuro azulado para elementos secundários (cartas, etc.)
+              'tennis-accent': '#a3e635',    // Verde limão para cabeçalhos e destaques
+            },
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            },
+          },
+        },
+      }
+    </script>
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter.css">
+    <style>
+      html {
+        font-size: 60%;
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0"
   }
 }
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body>
+  <body class="bg-tennis-dark text-tennis-light min-h-screen">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
